--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<h1>WELCOME Rishima kapoor</h1> 
+<h1>WELCOME Rishima kapoor</h1>
+<p>
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti iste sed
+  autem quam nostrum saepe animi alias debitis illum sunt, exercitationem
+  aliquam ad, quas itaque natus odio, quasi nisi earum.
+</p>
